# OwlSentry

./: .gitignore  Cargo.toml  README.md  install.sh
config/: owlsentry.conf  rules.toml
crates/owlsentry-common/: Cargo.toml
crates/owlsentry-common/src/: alert.rs  config.rs  i18n.rs  ipc.rs  lib.rs
crates/owlsentry-daemon/: Cargo.toml
crates/owlsentry-daemon/src/: dispatcher.rs  ipc_server.rs  lib.rs  logging.rs  main.rs  messages.rs  state.rs
crates/owlsentry-daemon/src/monitors/: audit.rs  fs.rs  mod.rs  net.rs  process.rs
crates/owlsentry-daemon/tests/: ipc_integration.rs
crates/owlsentry-gui/: Cargo.toml
crates/owlsentry-gui/src/: app.rs  client.rs  main.rs
packaging/: owlsentry.spec
packaging/logrotate/: owlsentry
packaging/selinux/: owlsentry.fc  owlsentry.if  owlsentry.te
packaging/systemd/: owlsentry-daemon.service
