[workspace]
resolver = "2"
members = [
    "crates/owlsentry-common",
    "crates/owlsentry-daemon",
    "crates/owlsentry-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OwlSentry contributors"]
repository = "https://github.com/memton80/OwlSentry"
rust-version = "1.80"

[workspace.dependencies]
owlsentry-common = { path = "crates/owlsentry-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
