[package]
name = "owlsentry-daemon"
description = "OwlSentry intrusion detection daemon for Fedora (auditd/SELinux, inotify, network, processes)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "owlsentry-daemon"
path = "src/main.rs"

[dependencies]
owlsentry-common.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "process",
    "signal",
    "fs",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
notify = "8"
nix = { version = "0.29", features = ["user", "fs"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
